# problem-solving-searching

./: .gitignore  README.md  a_star.py  app.py  pyproject.toml  requirements-dev.txt  uv.md
src/: cli_colors.py  collection.py  explored.py  frontier.py  matrix_plotter.py  node.py  output.py  reached.py  world.md  world.py
test/: test_a_star.py  test_explored.py  test_frontier.py  test_map.py  test_world.py
