[project]
name = "a-star"
version = "0.1.0"
description = "A* search algorithm"
authors = [
    {name = "dfleta", email = "gelpiorama@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
]
lint = [
    "ruff>=0.9.6",
]
